--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "name": "Flutter (Pixel 4 XL API 34)",
             "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}"
         }
